Added a new project div

--- a/index.html
+++ b/index.html
@@ -27,10 +27,21 @@
 
 	<!--About me-->
 
-	<div id="aboutme" style="height: 600px">
+	<div id="aboutme" style="height: 400px">
 		<div id="container">
 			<h2 style="text-align: center">ABOUT ME</h2>
-			<p style="font-size: 19px">I'm currently doing my Bachelors in Computer Engineering at the University of Texas at Arlington. I love Coding/Developing and watching T.V. shows like The Breaking Bad, Friends and The Big Bang Theory (I mean seriously, you can make me do this all day!).  </p>
+			<p style="font-size: 19px">I'm currently doing my Bachelors in Computer Engineering at the University of Texas at Arlington. I love Coding/Developing, watching  Breaking Bad, Friends and The Big Bang Theory and attending Hackathons. I started coding in High-School and fell in love with it as soon as I wrote my first "Hello, World!" program. </p>
+			<p style="font-size: 19px"> I graduated from <a href="http://www.dpsmathuraroad.net/">Delhi Public School</a>, Delhi, India on May 2014.
+		</div>
+	</div>
+
+	<!--projects -->
+
+	<div id="projects" style="height: 500px">
+		<div id="container">
+			<h1 style="text-align:center; color: white;">Projects</h1>
+				<p style="text-align:center; color: white; font-size: 17px;">YOU CAN CHECK MY PROJECTS OF GITHUB!</p>
+				<p style="text-align:center; color: white; font-size: 27px;"><a href="https://github.com/thearnavgarg" target="_blank"><i class="fa fa-github fa-2x" style="color: white"></i></a><p>
 		</div>
 	</div>
 
@@ -38,7 +49,7 @@
 
 	<div id="whatido" style="height: 500px; background-color: #9999C2;">
 		<div id="container">
-			<h2 style="text-align:center">WHAT DO I DO IN MY FREE TIME?</h2>
+			<h2 style="text-align:center">WHAT I LIKE DOING IN MY FREE TIME?</h2>
 			<div class="row">
 				<div class="col-md-4">
 					<h3><u>UTA ROVER</a></u></h3>
