--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 	<div id="whatido" style="height: 500px; background-color: #9999C2;">
 		<div id="container">
-			<h2 style="text-align:center">WHAT I LIKE DOING IN MY FREE TIME?</h2>
+			<h2 style="text-align:center">WHAT I DO IN MY FREE TIME</h2>
 			<div class="row">
 				<div class="col-md-4">
 					<h3><u>UTA ROVER</a></u></h3>
