made a few gramatical errors

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 				</div>
 				<div class="col-md-4">
 					<h3><u>Online Coding</u></h3>
-					<p>I love solving online problems. I am actively solving questions on<a href="https://www.hackerrank.com" target="_blank"> Hackerrank </a>, <a href="https://www.codechef.com" target="_blank"> Codechef </a>and similar websites.</p>
+					<p>I love solving online problems. I am quite active on sites like <a href="https://www.hackerrank.com" target="_blank"> Hackerrank </a> and <a href="https://www.codechef.com" target="_blank"> Codechef </a></p>
 				</div>
 				<div class="col-md-4">
 					<h3><u>Watch Movies/T.V. Series</u></h3>
-						<p>I love watching comedy movies and watching sitcoms like Big Bang Theory. I am love shows like Breaking Bad!</p>
+						<p>I love watching comedy movies and T.V. shows like The Big Bang Theory, Friends and Breaking Bad. </p>
 				</div>
 			</div>
 		</div>
