just added a small fullstop

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				</div>
 				<div class="col-md-4">
 					<h3><u>Online Coding</u></h3>
-					<p>I love solving online problems. I am quite active on sites like <a href="https://www.hackerrank.com" target="_blank"> Hackerrank </a> and <a href="https://www.codechef.com" target="_blank"> Codechef </a></p>
+					<p>I love solving online problems. I am quite active on sites like <a href="https://www.hackerrank.com" target="_blank"> Hackerrank </a> and <a href="https://www.codechef.com" target="_blank"> Codechef. </a></p>
 				</div>
 				<div class="col-md-4">
 					<h3><u>Watch Movies/T.V. Series</u></h3>
