removed some more gramatical errors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div id="container">
 			<h2 style="text-align: center">ABOUT ME</h2>
 			<p style="font-size: 19px">I'm currently doing my Bachelors in Computer Engineering at the University of Texas at Arlington. I love Coding/Developing, watching  Breaking Bad, Friends and The Big Bang Theory and attending Hackathons. I started coding in High-School and fell in love with it as soon as I wrote my first "Hello, World!" program. </p>
-			<p style="font-size: 19px"> I graduated from <a href="http://www.dpsmathuraroad.net/">Delhi Public School</a>, Delhi, India on May 2014.
+			<p style="font-size: 19px"> I graduated from <a href="http://www.dpsmathuraroad.net/">Delhi Public School</a>,New Delhi, India in May 2014.
 		</div>
 	</div>
 
@@ -53,7 +53,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<h3><u>UTA ROVER</a></u></h3>
-					<p>I am part of the controls team of the ROVER society of UTA and my job is to basically connect the joystick to the ROVER via Pygame.</p>
+					<p>I am part of the controls team of the ROVER society of UTA and my job is to connect the joystick to the ROVER via Pygame.</p>
 					<a href="https://github.com/thearnavgarg/ROVER-UTA" target="_blank"><i class="fa fa-github fa-2x" style="color: white"></i></a>
 				</div>
 				<div class="col-md-4">
