added some meta tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
 <head>
 	<title>Arnav Garg</title>
+	 <meta name="keywords" content="Arnav, Garg, Arnav Garg, arnav garg, arnav, garg, arnavgarg">
+	<meta name="description" content="Arnav Garg">
+	<meta charset="UTF-8">
+	<meta name="arnav garg" content="Arnav Garg">
 	<link href="main.css" rel="stylesheet" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" />
