change the connect to me font

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 	<!--projects -->
 
-	<div id="projects" style="height: 500px">
+	<div id="projects" style="height: 800px">
 		<div id="container">
 			<h1 style="text-align:center; color: white;">Projects</h1>
 				<p style="text-align:center; color: white; font-size: 17px;">YOU CAN CHECK MY PROJECTS OF GITHUB!</p>
@@ -77,9 +77,9 @@
 	<div id="connectwithme">
 		<div id="container" style="text-align: center; height: 400px">
 			<h2>CONNECT WITH ME</h2>
-			<i class="fa fa-phone fa-2x">  (682)-597-7383</i>
+			<i class="fa fa-phone fa-2x" style="font-size: 20px;">  (682)-597-7383</i>
 			<br /><br />
-			<i class="fa fa-file fa-2x"> <a href="Resume.pdf" target="_blank">Resume</a></i>
+			<i class="fa fa-file fa-2x" style="font-size: 20px;"> <a href="Resume.pdf" target="_blank">Resume</a></i>
 			<br /><br /><br /><br /><br /><br /><br />
 			<p style="color: black">Made by Arnav Garg | <a href="https://www.flickr.com/photos/132048424@N06/favorites" >Photo Credits</a></p>
 		</div>
