--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div id="projects" style="height: 800px">
 		<div id="container">
 			<h1 style="text-align:center; color: white;">Projects</h1>
-				<p style="text-align:center; color: white; font-size: 17px;">YOU CAN CHECK MY PROJECTS OF GITHUB!</p>
+				<p style="text-align:center; color: white; font-size: 17px;">YOU CAN CHECK MY PROJECTS ON GITHUB!</p>
 				<p style="text-align:center; color: white; font-size: 27px;"><a href="https://github.com/thearnavgarg" target="_blank"><i class="fa fa-github fa-2x" style="color: white"></i></a><p>
 		</div>
 	</div>
