Changed a bit in my Resume

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 	<div class="jumbotron">
 		<div class="container">
-			<h1 style="font-size: 40px">HELLO. I'M ARNAV GARG.</h1>
+		<h1 style="font-size: 67px">HELLO, WORLD!</h1>
+			<h1 style="font-size: 40px">I'M ARNAV GARG.</h1>
 			<p>UTA '18, Computer Science and Engineering.</p>
 			<div id="icons">
 				<a href="https://twitter.com/thearnavgarg" target="_blank"><i class="fa fa-twitter fa-2x" style="color: white"></i></a>
