changed the description.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div id="aboutme" style="height: 500px">
 		<div id="container">
 			<h2 style="text-align: center">ABOUT ME</h2>
-			<p style="font-size: 19px">I'm currently doing my Bachelors in Computer Engineering at the University of Texas at Arlington. I love Coding/Developing, watching  Breaking Bad, Friends and The Big Bang Theory and attending Hackathons. I started coding in High-School and fell in love with it as soon as I wrote my first "Hello, World!" program. </p>
+			<p style="font-size: 19px">I'm currently doing my Bachelors in Computer Engineering at the University of Texas at Arlington. I love Coding/Developing, watching  Breaking Bad, Friends and like Whose Line Is It Anyways? and attending Hackathons. I started coding in High-School and fell in love with it as soon as I wrote my first "Hello, World!" program. </p>
 			<p style="font-size: 19px"> I graduated from <a href="http://www.dpsmathuraroad.net/">Delhi Public School</a>, New Delhi, India in May 2014.
 		</div>
 	</div>
@@ -67,7 +67,7 @@
 				</div>
 				<div class="col-md-4">
 					<h3><u>Watch Movies/T.V. Series</u></h3>
-						<p>I love watching comedy movies and T.V. shows like The Big Bang Theory, Friends and Breaking Bad. </p>
+						<p>I love watching comedy movies and T.V. shows like Whose Line Is It Anyways?, Friends and Breaking Bad. </p>
 				</div>
 			</div>
 		</div>
