--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 	<div class="jumbotron" id="jumbotron">
 		<div class="container">
-			<img src = "images/myImage.jpg" id = "circular">
+			<img src = "images/imageMe.jpg" id = "circular">
 			<h1 style="font-size: 40px">Hi. I'm Arnav Garg.</h1>
 			<p style ="color:grey">UTA '18, Computer Science and Engineering.</p>
 			<div id="icons">
