changed compter engg to compter science

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="container">
 			<img src = "images/imageMe.jpg" id = "circular">
 			<h1 style="font-size: 40px">Hi. I'm Arnav Garg.</h1>
-			<p style ="color:grey">UTA '18, Computer Science and Engineering.</p>
+			<p style ="color:grey">UTA '18, Computer Science.</p>
 			<div id="icons">
 				<a href="https://twitter.com/thearnavgarg" target="_blank"><i class="fa fa-twitter fa-2x" style="color: white"></i></a>
 				<a href="https://www.facebook.com/thearnavg" target="_blank"><i class="fa fa-facebook fa-2x" style="color: white"></i></a>
@@ -51,7 +51,7 @@
 	<div class="aboutme" style="height: 500px" id="aboutme">
 		<div class="container">
 			<h2 style="text-align: center">Who Am I?</h2>
-			<p style="font-size: 19px">I'm currently doing my Bachelors in Computer Engineering at the University of Texas at Arlington. I love Coding/Developing, watching  Breaking Bad, Friends and Whose Line Is It Anyways? and attending Hackathons. I started coding in High-School and fell in love with it as soon as I wrote my first "Hello, World!" program. </p>
+			<p style="font-size: 19px">I'm currently doing my Bachelors in Computer Science at the University of Texas at Arlington. I love Coding/Developing, watching  Breaking Bad, Friends and Whose Line Is It Anyways? and attending Hackathons. I started coding in High-School and fell in love with it as soon as I wrote my first "Hello, World!" program. </p>
 			<p style="font-size: 19px"> I graduated from <a href="http://www.dpsmathuraroad.net/">Delhi Public School</a>, New Delhi, India in May 2014.
 		</div>
 	</div>
