correct the layout of fa fa-bars

--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
         </div>
     </div>
 
-        <div class="menu-icon">
-            <i class="fa fa-bars fa-2x" style="color: grey"></i>
-        </div>
+       
 
 	<!--Main page heading-->
 
 	<div class="jumbotron" id="jumbotron">
 		<div class="container">
+             <div class="menu-icon">
+                <i class="fa fa-bars fa-2x" style="color: grey"></i>
+            </div>
 			<img src = "images/imageMe.jpg" id = "circular">
 			<h1 style="font-size: 40px">Hi. I'm Arnav Garg.</h1>
 			<p style ="color:grey">UTA '18, Computer Science.</p>
@@ -61,7 +62,9 @@
 	<div class="blog" id="blog">
 		<div class="container">
 			<h2>CHECK OUT MY BLOG!</h2>
-			<h3 style="text-align: center"><a class = "btn btn-primary btn-lg" href="blog.html">BLOG</a></h3>
+            <div class="button">
+			     <h3 style="text-align: center"><a class = "btn btn-primary btn-lg" href="blog.html">BLOG</a></h3>
+            </div>
 		</div>
 	</div>
 
