changed the location of blog

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-	<title>Arnav Garg</title>
-	 <meta name="keywords" content="Arnav, Garg, Arnav Garg, arnav garg, arnav, garg, arnavgarg">
-	<meta name="description" content="Arnav Garg">
+	<title>Arnav Garg - UTA '18 Computer Science.</title>
+	 <meta name="keywords" content="arnav, arnavgarg, ArnavGarg, arnav garg, arnav garg uta, garg, arnav garg computer science">
+	<meta name="description" content="arnav, arnavgarg, ArnavGarg, arnav garg, arnav garg uta, garg, arnav garg computer science">
 	<meta charset="UTF-8">
 	<meta name="arnav garg" content="Arnav Garg">
 	<link href="main.css" rel="stylesheet" />
@@ -17,8 +17,9 @@
         <div class="container">
             <ul>
                 <li><a href="#jumbotron">Home</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="#aboutme">About Me</a></li>
-                <li><a href="#blog">Blog</a></li>
+                <li><a href="#services">Coding</a></li>
                 <li><a href="#portfolio">Experience</a></li>
                 <li><a href="#connectwithme">Contact me</a></li>
             </ul>
@@ -44,6 +45,7 @@
 				<a href="https://www.linkedin.com/in/arnavgarg30/en" target="_blank"><i class="fa fa-linkedin fa-2x" style="color: white"></i></a>
 				<a href="mailto:arnavgarg30@outlook.com" target="_blank"><i class="fa fa-envelope fa-2x" style="color: white"></i></a>
 			</div>
+
 		</div>
 	</div>
 
@@ -53,21 +55,54 @@
 		<div class="container">
 			<h2 style="text-align: center">Who Am I?</h2>
 			<p style="font-size: 19px">I'm currently doing my Bachelors in Computer Science at the University of Texas at Arlington. I love Coding/Developing, watching  Breaking Bad, Friends and Whose Line Is It Anyways? and attending Hackathons. I started coding in High-School and fell in love with it as soon as I wrote my first "Hello, World!" program. </p>
-			<p style="font-size: 19px"> I graduated from <a href="http://www.dpsmathuraroad.net/">Delhi Public School</a>, New Delhi, India in May 2014.
+			<p style="font-size: 19px"> I graduated from <a href="http://www.dpsmathuraroad.net/">Delhi Public School</a>, New Delhi, India in May 2014.</p>
+            <a href="blog.html" id = "button" class="btn btn-primary btn-lg"><i class="fa fa-external-link fa-1x">&nbsp; &nbsp;Blog</i></a>
 		</div>
+
 	</div>
 
-	<!--projects -->
-
-	<div class="blog" id="blog">
-		<div class="container">
-			<h2>CHECK OUT MY BLOG!</h2>
-            <div class="button">
-			     <h3 style="text-align: center"><a class = "btn btn-primary btn-lg" href="blog.html">BLOG</a></h3>
+   <div id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Coding</h2>
+                    <hr class="primary">
+                </div>
             </div>
-		</div>
-	</div>
-
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-code wow bounceIn text-primary"></i>
+                        <h3>Languages</h3>
+                        <p class="text-muted" style="color: white">HTML, CSS, C++, Python, Java.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center kk">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-laptop wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <h3>Operating Systems</h3>
+                        <p class="text-muted" style="color: white">Linux, Windows, Mac OS and Android.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-terminal wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <h3>Text Editors & IDEs</h3>
+                        <p class="text-muted" style="color: white">IDEs/Text Editors - Android Studio, Visual Studio, NetBeans, Eclipse, Sublime, TextMate, Notepad++</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center kk">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-file wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                        <h3>Interests</h3>
+                        <p class="text-muted" style="color: white">Soccer and Music</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 	<!-- Portfolio -->
     <section id="portfolio" class="portfolio">
         <div class="container">
@@ -106,7 +141,7 @@
 
 	<!--let's connect-->
 	
-	<div class="connectwithme" id="connectwithme">
+<div class="connectwithme" id="connectwithme">
     <div class="container" style="text-align: center; height: 400px">
         <h2>CONNECT WITH ME</h2>
         <i class="fa fa-phone fa-2x" style="font-size: 20px;">  (682)-597-7383</i>
