--- a/index.html
+++ b/index.html
@@ -30,38 +30,54 @@
 
 	<!--Main page heading-->
 
-	<div class="jumbotron" id="jumbotron">
-		<div class="container">
-             <div class="menu-icon">
+	<header class="jumbotron" id="jumbotron">
+		<div class="menu-icon">
                 <i class="fa fa-bars fa-2x" style="color: grey"></i>
             </div>
+        <div class="container">
 			<img src = "images/imageMe.jpg" id = "circular">
 			<h1 style="font-size: 40px">Hi. I'm Arnav Garg.</h1>
 			<p style ="color:grey">UTA '18, Computer Science.</p>
 			<div id="icons">
+                <div class="icond">
 				<a href="https://twitter.com/thearnavgarg" target="_blank"><i class="fa fa-twitter fa-2x" style="color: white"></i></a>
+                </div>
+                <div class="icond">
 				<a href="https://www.facebook.com/thearnavg" target="_blank"><i class="fa fa-facebook fa-2x" style="color: white"></i></a>
+                </div>
+                <div class="icond">
 				<a href="https://github.com/thearnavgarg" target="_blank"><i class="fa fa-github fa-2x" style="color: white"></i></a>
+                </div>
+                <div class="icond">
 				<a href="https://www.linkedin.com/in/arnavgarg30/en" target="_blank"><i class="fa fa-linkedin fa-2x" style="color: white"></i></a>
+                </div>
+                <div class="icond">
 				<a href="mailto:arnavgarg30@outlook.com" target="_blank"><i class="fa fa-envelope fa-2x" style="color: white"></i></a>
+                </div>
 			</div>
 
 		</div>
-	</div>
+	</header>
 
 	<!--About me-->
 
-	<div class="aboutme" style="height: 500px" id="aboutme">
+	<section class="aboutme" style="height: 500px" id="aboutme">
 		<div class="container">
 			<h2 style="text-align: center">Who Am I?</h2>
-			<p style="font-size: 19px">I'm currently doing my Bachelors in Computer Science at the University of Texas at Arlington. I love Coding/Developing, watching  Breaking Bad, Friends and Whose Line Is It Anyways? and attending Hackathons. I started coding in High-School and fell in love with it as soon as I wrote my first "Hello, World!" program. </p>
-			<p style="font-size: 19px"> I graduated from <a href="http://www.dpsmathuraroad.net/">Delhi Public School</a>, New Delhi, India in May 2014.</p>
-            <a href="blog.html" id = "button" class="btn btn-primary btn-lg"><i class="fa fa-external-link fa-1x">&nbsp; &nbsp;Blog</i></a>
+            <br > 
+            <div class="aboutmetext" style="text-align: center">
+    			<p style="font-size: 19px">I'm currently doing my Bachelors in Computer Science at the University of Texas at Arlington. I love Coding/Developing, watching  Breaking Bad, Friends and Whose Line Is It Anyways? and attending Hackathons. I started coding in High-School and fell in love with it as soon as I wrote my first "Hello, World!" program. </p>
+    			<p style="font-size: 19px"> I graduated from <a href="http://www.dpsmathuraroad.net/">Delhi Public School</a>, New Delhi, India in May 2014.</p>
+            </div>
+            <br > <br > <br > <br > 
+            <div class="buttoncontainer">
+                <a href="blog.html" id = "button" class="btn btn-primary btn-lg"><i class="fa fa-external-link fa-1x">&nbsp; &nbsp;Blog</i></a>
+            </div>
 		</div>
 
-	</div>
+	</section>
 
-   <div id="services">
+   <section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -102,7 +118,8 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+
 	<!-- Portfolio -->
     <section id="portfolio" class="portfolio">
         <div class="container">
@@ -136,21 +153,27 @@
             <!-- /.row -->
         </div>
         <!-- /.container -->
+        <br> <br>
+        <br> <br>
     </section>
 
 
 	<!--let's connect-->
 	
-<div class="connectwithme" id="connectwithme">
+<footer class="connectwithme" id="connectwithme">
     <div class="container" style="text-align: center; height: 400px">
+        <div class="connect">
         <h2>CONNECT WITH ME</h2>
+        </div>
+        <div class="connecticons">
         <i class="fa fa-phone fa-2x" style="font-size: 20px;">  (682)-597-7383</i>
         <br /><br />
         <i class="fa fa-file fa-2x" style="font-size: 20px;"> <a href="Resume.pdf" target="_blank">Resume</a></i>
         <br /><br /><br /><br /><br /><br /><br />
+        </div>
         <p style="color: white" id="credits" >Made by Arnav Garg | <a href="https://www.flickr.com/photos/132048424@N06/favorites" >Photo Credits</a></p>
     </div>
-</div>
+</footer>
 	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
