added a thumbnail image

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <title>Arnav Garg - UTA '18 Computer Science.</title>
-     <meta name="keywords" content="arnav, arnavgarg, ArnavGarg, arnav garg, arnav garg uta, garg, arnav garg computer science">
+    <meta property="og:site_name" content="Arnav Garg - Portfolio"/>
+    <meta property="og:image" content="thumbnailimage.png">
+    <meta name="keywords" content="arnav, arnavgarg, ArnavGarg, arnav garg, arnav garg uta, garg, arnav garg computer science">
     <meta name="description" content="arnav, arnavgarg, ArnavGarg, arnav garg, arnav garg uta, garg, arnav garg computer science">
     <meta charset="UTF-8">
     <meta name="arnav garg" content="Arnav Garg">
