changed the image size

--- a/index.html
+++ b/index.html
@@ -144,6 +144,13 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
+                                    <img src="images/research.png" height="307" width="450">
+                                <h3> Undergraduate Research </h3>
+                               During the Summer of 2015, I helped a professor with his research on Database Application Testing in which we were trying to find new ways to increase code coverage in database applications.
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
                                     <img class="img-portfolio img-responsive" src="images/rover.jpg">
                                 
                                 <h3> ROVER SOCIETY </h3>
@@ -151,13 +158,6 @@
                                 I also made an overlay Python code that helped to parse the GPS values received from the GPS located on the ROVER and send it 
                                 to an offline map viewer program called GMapCatcher.
 
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                    <img class="img-portfolio img-responsive" src="images/research.png">
-                                <h3> Undergraduate Research </h3>
-                               During the Summer of 2015, I helped a professor with his research on Database Application Testing in which we were trying to find new ways to increase code coverage in database applications.
                             </div>
                         </div>
                     </div>
