changed the image type for the thumbnail image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Arnav Garg - UTA '18 Computer Science.</title>
     <meta property="og:site_name" content="Arnav Garg - Portfolio"/>
-    <meta property="og:image" content="thumbnailimage.png">
+    <meta property="og:image" content="thumbnailimage.jpg">
     <meta name="keywords" content="arnav, arnavgarg, ArnavGarg, arnav garg, arnav garg uta, garg, arnav garg computer science">
     <meta name="description" content="arnav, arnavgarg, ArnavGarg, arnav garg, arnav garg uta, garg, arnav garg computer science">
     <meta charset="UTF-8">
