--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                    <img src="images/research.png" height="307" width="450">
+                                    <img src="images/research.jpg" height="307" width="450">
                                 <h3> Undergraduate Research </h3>
                                During the Summer of 2015, I helped a professor with his research on Database Application Testing in which we were trying to find new ways to increase code coverage in database applications.
                             </div>
