made the homescreen equal to the viewport size

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div class="container">
 
             <img src = "images/imageMe.jpg" id = "circular">
-            <h1 style="font-size: 40px">Hi. I'm Arnav Garg.</h1>
-            <p style ="color:grey">UTA '18, Computer Science.</p>
+            <h1 style="font-size: 45px">Hi. I'm Arnav Garg.</h1>
+            <p style ="color:white; font-size: 25px">UTA '18, Computer Science.</p>
             <div id="icons">
                 <div class="icond">
                 <a href="https://twitter.com/thearnavgarg" target="_blank"><i class="fa fa-twitter fa-2x" style="color: white"></i></a>
