added my 12th class certificate

--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
 
                             </div>
                         </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
+                             <a href="images/12gradecertificate.png"><img class="img-portfolio img-responsive" src="images/12gradecertificate.png" class = "imageborder"></a>
+                                <h3> Top 1% in India </h3>
+                               I was awarded a Scholarship for Highier Education (SHE) under innovation in Science Pursuit for Inspired Research (INSPIRE) by virtue of performance within the top 1% of the Senior School Certificate Examination conducted by the Central Board of Secondary Education, Delhi held during the academic session ending March/April 2014. I scored 95.6% equivalent to 5.0 GPA in Highschool.
+
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- /.col-lg-10 -->
