--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Arnav Garg - UTA '18 Computer Science.</title>
+    <title>Arnav Garg</title>
     <meta property="og:site_name" content="Arnav Garg - Portfolio"/>
     <meta property="og:image" content="thumbnailimage.jpg">
     <meta name="keywords" content="arnav, arnavgarg, ArnavGarg, arnav garg, arnav garg uta, garg, arnav garg computer science">
@@ -203,13 +203,3 @@
     <script src="js/app.js"></script>
 </body>
 </html>
-
-<!-- Google Tag Manager -->
-<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-T2NM9F"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-T2NM9F');</script>
-<!-- End Google Tag Manager -->
