--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="main.css" rel="stylesheet" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <meta http-equiv="refresh" content="">
+
 </head>
 
 <body>
