changed the mailing address

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <a href="https://www.linkedin.com/in/arnavgarg30/en" target="_blank"><i class="fa fa-linkedin fa-2x" style="color: white"></i></a>
                 </div>
                 <div class="icond">
-                <a href="mailto:arnavgarg30@outlook.com" target="_blank"><i class="fa fa-envelope fa-2x" style="color: white"></i></a>
+                <a href="mailto:arnav.garg@mavs.uta.edu" target="_blank"><i class="fa fa-envelope fa-2x" style="color: white"></i></a>
                 </div>
             </div>
 
