made some changes'

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        <div class="container">
             <div class="text-center page-header">
                 <i id="about-me-heading" class=" fa fa-user" style="font-size: 100px">
-                </i>
+                </i> <h1>About me</h1>
             </div>
             
             <div class="row">
