added the about me section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                 </div>
                 
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" style="font-size: 25px; padding-top: 50px">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non quo tenetur fugit necessitatibus omnis dolore, molestiae officia. Facilis blanditiis repellat eum possimus id exercitationem cum nesciunt mollitia facere aut, incidunt? Asperiores, voluptas odio architecto temporibus cupiditate dolorum quod voluptatum, quis sequi, facilis dignissimos, labore numquam suscipit dicta maxime eaque dolor!</p>
+                    <p>Hi. I'm Arnav Garg</p>
+                    <p>I am a software developer, open source enthusiast and a caffeine addict.</p>
+                    <p>I am a Junior in Computer Science at the University of Texas at Arlington. I'll be graduating in May 2018.</p>
+                    <p>I like to work on projects I’m told are impossible. I have built tangible robots and bots that play video games.</p>
                 </div>
             </div>
         </div>
