--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" style="font-size: 25px; padding-top: 50px">
                     <p>Hi. I'm Arnav Garg</p>
-                    <p>I am a software developer, open source enthusiast and a  caffeine likienfiosejf.</p>
-                    <p>I am a Junior in Computer Science at the <a href="https://uta.edu">University of Texas at Arlington</a>. I'll be graduating in May 2018.</p>
+                    <p>I am a software developer, open source enthusiast and a  caffeine addict.</p>
+                    <p>I am a Junior in Computer Science at the <a href="https://uta.edu" target="_blank">University of Texas at Arlington</a>. I'll be graduating in May 2018.</p>
                     <p>I like to work on projects I’m told are impossible. I have built tangible robots and bots that play video games.</p>
                 </div>
             </div>
