--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -181,7 +181,7 @@
             </ul> 
             
             <br>
-            <button type="button" class="btn btn-secondary btn-lg" id="resume-button" href="./Resume.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>  Resumé</button>
+            <button type="button" class="btn btn-secondary btn-lg" id="resume-button" onclick="window.location.href='Resume.pdf'"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>  Resumé</button>
             <br>
             
             <h3 class="page-header">&copy; Arnav Garg</h3>
