--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
             <div class="row" style="margin-bottom: 5px;">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2 class="page-header text-center"> HERACLEIA</h2>
-                    <img src="img/heraclea.png" class="img-responsive img-rounded img-config" alt="" style="margin: auto; margin-bottom: 20px">
+                    <img src="img/heraclea.png" class="img-responsive img-rounded research-img-config" alt="" style="margin: auto; margin-bottom: 20px">
                     <h4 class="text-center">Undergraduate Research Assistant</h4>
                     <p>The Heracleia Laboratory is hosted in the Department of Computer Science and Engineering at the University of Texas at Arlington. The Heracleia Lab is a research laboratory specializing in medical imaging, bioinformatics, sensor networks, and collaboration systems. The lab has an extensive complement of Macintosh, UNIX/Linux, and Microsoft Windows computing equipment for support of its research projects.</p> 
                 </div>
 
                 <div class="col-lg- col-md-6 col-sm-12 col-xs-12">
                     <h2 class="page-header text-center"> IDIR LAB</h2>
-                    <img src="img/idir_labs.png" class="img-responsive img-rounded img-config" alt="" style="margin: auto; margin-bottom: 20px">
+                    <img src="img/idir_labs.png" class="img-responsive img-rounded research-img-config" alt="" style="margin: auto; margin-bottom: 20px">
                     <h4 class="text-center">Software Summer Intern</h4>
                     <p>The IDIR Lab in the CSE Department of UT Arlington conducts research in several areas related to big data and data science, including database, data mining, Web data management, and information retrieval. Its current research is focused on building large-scale human-assisting and human-assisted data and information systems with high usability, low cost and applications for social good. In particular, the IDIR lab is working on computational journalism, crowdsourcing and human computation, data exploration by ranking (top-k), skyline and preference queries, database testing, entity query, and usability challenges in querying graph data.</p> 
                 </div>
