changed the title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Arnav Garg's Portfolio</title>
+    <title>Arnav Garg</title>
 
     <!-- Favicon details -->
     <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
