made some changes to the tag

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Arnav Garg</title>
     <meta name="author" content="Arnav Garg">
     <meta name="description" content="Arnav Garg Personal Website, UTA Computer Science">
-    <meta name="keywords" content="arnav, garg, arnav garg, arnavgarg, arnav garg uta, arnavgarg uta, UTA, University of Texas at Arlington">
+    <meta name="keywords" content="arnav, garg, arnav garg, arnavgarg, arnav garg uta, arnavgarg uta, Arnav, Garg, Arnav Garg, Arnav Garg UTA, UTA, University of Texas at Arlington">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Arnav Garg" />
