Changed the college status

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
          <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" style="font-size: 25px; padding-top: 50px">
             <p>Hi. I'm Arnav Garg</p>
             <p>I am a software developer, open source enthusiast and a  caffeine addict.</p>
-            <p>I am a Junior in Computer Science at the <a href="http://uta.edu" target="_blank">University of Texas at Arlington</a>. I'll be graduating in May 2018.</p>
+            <p>I am a Senior in Computer Science at the <a href="http://uta.edu" target="_blank">University of Texas at Arlington</a>. I'll be graduating in May 2018.</p>
             <p>I am current interning at <a href="https://cloud9perception.com/" target="_blank">Cloud 9 Perception</a> as a Software Engineering Intern. Previously interned at <a href="https://nod.com/" target="_blank">Nod Labs</a> and <a href="https://idir.uta.edu/index.php/Innovative_Database_and_Information_Systems_Research_Laboratory" target="_blank">IDIR Labs </a> as a Software Engineering Intern.</p>
             <p>I like to work on projects that i’m told are impossible. I have built tangible robots and bots that play video games.</p>
         </div>
